--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   r2dbc:
-    url: r2dbc:postgresql://db/books
-    username: root
-    password: Ora1626X
+    url: r2dbc:postgresql://${DB_HOST:db}/${DB_NAME:books}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:Ora1626X}
